changes to contextswitch and beerinfo.css to fix horizontal scrolling issue. some work on iframes for firefox

--- a/css/beerInfo.css
+++ b/css/beerInfo.css
@@ -7,6 +7,7 @@
         padding-bottom: 25px;
         background-color: white;
         font-family: 'Noto Sans Kannada', sans-serif;
+        height: auto;
     }
 
     h1 {
@@ -15,11 +16,12 @@
 
     .LargeTable {
         height: auto;
-        width: 100%;
+        width: 99.5%;
         position: absolute;
         margin: auto;
         text-align: center;
-        border: 2px solid lightgray;
+        border-top: 2px solid lightgray;
+        border-bottom: 2px solid lightgray;
         border-radius: 2px;
         box-shadow: 0px 5px 5px lightgray;
         display: block;
@@ -116,7 +118,7 @@
 
     .favBtn {
         position: absolute;
-        width: 50px;
+        width: 40px;
         height: 99.5%;
         margin-top: 0px;
         left: 0px;
@@ -131,7 +133,7 @@
         width: 50px;
         height: 100%;
         border: none;
-        left: 0px;
+        left: 3px;
         background-color: #191d24;
         position: absolute;
         z-index: 5;
@@ -142,7 +144,7 @@
         height: 100%;
         top: 0px;
         border: none;
-        right: 1px;
+        right: 3px;
         background-color: #191d24;
         position: absolute;
         z-index: 5;
