--- a/css/masterPage.css
+++ b/css/masterPage.css
@@ -57,6 +57,7 @@ aside.right {
 
 section {
     width: 50%;
+    padding: 0px;
     justify-content: center;
     position: absolute;
     display: flex;
